# Phishing-url

./: README.md  best_model.pkl  pyproject.toml
cache/joblib/sklearn/pipeline/_fit_transform_one/01a9b4612be466704e523fc53b89fa87/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/062ee5480ad3431fe9dee95c13849065/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/0935cdc3325832851a3520b49aa687ea/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/0cf260c9635b7bbead95e5f03b1a42a1/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/123a578ccf4fd0ba8529dd60573d09fc/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/1745bf9be72c297ff3b35f6b4e4572f7/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/1b119bc55a851e4be0c755591d236913/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/236d2a7e7485c1479e8a5cddc99186a0/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/2e8ff6de53feb06447579f6bd5bfdeae/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/437085b355ea707da5d418d4e0bbffe1/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/4467b0f41ed18d9d17bb8609abb64fbe/: metadata.json
cache/joblib/sklearn/pipeline/_fit_transform_one/4bff93ea1e327f85a46475baf82484e7/: metadata.json
phishing_url_analyzer/data/: data_building.py
phishing_url_analyzer/features_extracting/: phishing_feature_extract.py
phishing_url_analyzer/model/: best_model.pkl  phishing_url_analyzer.py
tests/: test_dataset.py  test_phishing_url_analyzer.py
(+24 files in other folders)
