[tool.poetry]
name = "phishing-url-analyzer"
version = "0.1.0"
description = "This project tests several models on phishing URL data and chooses one of the best models to perform future analysis on new phishing data."
authors = ["SAID Abakar <abakar.said.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ucimlrepo = "^0.0.7"
tldextract = "^5.1.2"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
